
[build-system]
requires = ["poetry"]

[tool.poetry]
name = "dream-test-tools"
description = "tools for running tests involving DreamMaker code"
version = "1.0.0a"
authors = [ "mumencoder" ]
repository = "https://github.com/mumencoder/dream-test-tools"
license = "MIT"
packages = [
    {include = "DMShared", from = "src"},
    {include = "DreamCollider", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"

pyyaml = "*"

celery = "*"
flower = "*"

redis = "*"

requests = "*"
fastapi = "*"
uvicorn = "*"

dash = "*"
dash_bootstrap_components = "*"